2005-11-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmphotosetup.c, gui/gdmphotosetup.glade:  
	  Fix bug #317744, "Login photo dialog is awful",
	  by simplifying the dialog.

2005-11-23  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/verify-crypt.c, daemon/verify-pam.c,
	  Convert to using new gdmconfig interfaces.
	* daemon/choose.c, daemon/errorgui.c,
	  daemon/gdm.c, daemon/gdmconfig.c,
	  daemon/misc.c, daemon/slave.c,
	  daemon/xdmcp.c, gui/gdmXnestchooser.c,
	  gui/gdmconfig.c, gui/gdmlogin.c,
	  gui/greeter/greeter_canvas_textm.c:  Fix
	  compiler warnings.  Patch provided by
          Frederic Crozat on gdm-list@gnome.org.
	  Also make sure that all functions have
	  a space before the "(" to better follow
	  coding style guide.

	* daemon/cookie.c, daemon/display.c,
	  daemon/gdm-net.c, daemon/getvt.c, 
	  daemon/md5.c, daemon/server.c, 
	  daemon/verify-pam.c, gui/gdmchooser.c,
	  gui/gdmcommon.c, gui/gdmdynamic.c,
	  gui/gdmlanguages.c, gui/gdmuser.c,
	  gui/greeter/greeter.c,
	  gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_action_canvas_item.c,
	  gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c:  Make
	  sure that all functions have a space
	  before the "(" to better follow coding
	  style guide.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/getvt.c: Fix ifdefs again.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

        * gui/modules/keymouselistener.c,
          gui/modules/dwellmouselistener.c:  
	  Backing out this fix.  It is not needed.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

        * gui/modules/keymouselistener.c,
          gui/modules/dwellmouselistener.c:  
          Fix build on Darwin.  Fixes bug #322085.
          Patch provided by dmacks@netspace.org.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmconfig.c: Remove value_set_hash
	  since it isn't really needed.  Further
	  cleanup.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
