@@ -1,5 +1,10 @@
 2005-11-23  Dennis Cranston  <dennis_cranston@yahoo.com>
 
+	* gui/gdmphotosetup.c: (browse_button_cb):
+	  Fix a double free.  Remove unused function.
+
+2005-11-23  Dennis Cranston  <dennis_cranston@yahoo.com>
+
 	* gui/gdmphotosetup.c, gui/gdmphotosetup.glade:  
 	  Fix bug #317744, "Login photo dialog is awful",
 	  by simplifying the dialog.
